[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1part1"
path = "src/day1part1.rs"

[[bin]]
name = "day1part2"
path = "src/day1part2.rs"

[[bin]]
name = "day2part1"
path = "src/day2part1.rs"
